<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForecastMenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/idImageRandom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/horoscope"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/choose_forecast"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/idImageRandom"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/zwdioname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/zwdiotitle"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/idImageRandom"
        app:layout_constraintTop_toBottomOf="@id/chooseForecast" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dailyForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dailyforecast"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/idImageRandom"
        app:layout_constraintTop_toBottomOf="@id/zwdioname" />

    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/weeklyForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weeklyforecast"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/idImageRandom"
        app:layout_constraintTop_toBottomOf="@id/dailyForecast" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/monthlyForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/monthlyforecast"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/idImageRandom"
        app:layout_constraintTop_toBottomOf="@id/weeklyForecast" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/yearlyForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/yearlyforecast"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/idImageRandom"
        app:layout_constraintTop_toBottomOf="@id/monthlyForecast" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idBtnDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_button"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/yearlyForecast" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idBtnShowBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_bottomsheet"
        android:visibility="invisible"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/idBtnDismiss" />

</androidx.constraintlayout.widget.ConstraintLayout>

